--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Counter</string>
+    <string name="del_counter">Delete Counter</string>
+    <string name="counter_">Counter </string>
 </resources>
